--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script src="config.js?v=15"></script><!-- adapt to your needs, i.e. set hosts and bosh path -->
     <script src="utils.js?v=1"></script>
     <!--#include virtual="connection_optimization/connection_optimization.html" -->
+    <script src="libs/external_connect.js"></script>	
     <script src="connection_optimization/do_external_connect.js?v=1"></script>
     <script src="interface_config.js?v=6"></script>
-    <script src="libs/lib-jitsi-meet.min.js?v=139"></script>
-    <script src="libs/app.bundle.min.js?v=139"></script>
+    
+    <script src="libs/lib-jitsi-meet.js?v=139"></script>
+    <script src="libs/app.bundle.js?v=139"></script>
     <link rel="icon" type="image/png" href="/images/favicon.ico?v=1"/>
     <meta property="og:title" content="Jitsi Meet"/>
     <meta property="og:image" content="/images/jitsilogo.png?v=1"/>
